--- a/MedicalReport/WebContent/WEB-INF/web.xml
+++ b/MedicalReport/WebContent/WEB-INF/web.xml
@@ -5,25 +5,25 @@
     <servlet-name>AddReportServlet</servlet-name>
     <servlet-class>com.project.servlet.AddReportServlet</servlet-class>
   </servlet>
-  <servlet-mapping>
-    <servlet-name>AddReportServlet</servlet-name>
-    <url-pattern>/addReport</url-pattern>
-  </servlet-mapping>
   <servlet>
     <servlet-name>TodaysReportServlet</servlet-name>
     <servlet-class>com.project.servlet.TodaysReportServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>UserLoginServlet</servlet-name>
+    <servlet-class>com.project.servlet.UserLoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserLoginServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AddReportServlet</servlet-name>
+    <url-pattern>/addReport</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>TodaysReportServlet</servlet-name>
     <url-pattern>/todaysReport</url-pattern>
-  </servlet-mapping>
-   <servlet>
-    <servlet-name>UserManagementServlet</servlet-name>
-    <servlet-class>com.project.servlet.UserManagementServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>UserManagementServlet</servlet-name>
-    <url-pattern>/userManagment</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
